force-app/main/default/objects/Product_Category__c/Product_Category__c.object-meta.xml
<CustomObject>
    <label>Product Category</label>
    <pluralLabel>Product Categories</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Category Name</label>
    </nameField>
    <sharingModel>Read</sharingModel>
    <description>Single-level product catalog category (Food, Beverages, Cleaning, Packaging...). OWD Public Read Only. Chosen as a Custom Object (not picklist) per the picklist-vs-Custom-Object framework. See decisions-log Product domain / Categories.</description>
</CustomObject>