force-app/main/default/objects/Product_Category__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this category is active and shown in the catalog.</description>
</CustomField>