force-app/main/default/objects/Product_Category__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>Optional description of the category.</description>
</CustomField>