force-app/main/default/objects/Product_Category__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <description>Sort order for displaying categories in the catalog/portal UI.</description>
</CustomField>