force-app/main/default/objects/Product_Category__c/fields/Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>Icon_URL__c</fullName>
    <label>Icon URL</label>
    <type>Url</type>
    <description>URL of the category icon shown in the catalog/portal UI.</description>
</CustomField>